# python-server/swagger/todo.yaml
@@ -13,7 +13,11 @@ security:
   - oauth2: [uid]
 
 basePath: /v1.0
-
+tags:
+  - name: "todos"
+    description: "A TODO task"
+schemes:
+  - "http"
 paths:
   /todos:
     get:
@@ -82,7 +86,63 @@ paths:
           description: Todo was deleted
         404:
           description: Todo does not exist
-
+  /todos/findByStatus:
+    get:
+      tags: [Todo]
+      summary: "Finds TODOs by status"
+      description: "Multiple status values can be provided with comma separated strings"
+      operationId: "api.todo.class_instance.find_by_status"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "status"
+        in: "query"
+        description: "Status values that need to be considered for filter"
+        required: true
+        type: "array"
+        items:
+          type: "string"
+          enum:
+          - "available"
+          - "pending"
+          - "sold"
+          default: "available"
+        collectionFormat: "multi"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Todo"
+        400:
+          description: "Invalid status value"
+  /todo/findByTags:
+    get:
+      tags: [Todo]
+      summary: "Finds TODOs by tags"
+      description: "Muliple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing."
+      operationId: "api.todo.class_instance.find_by_tags"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "tags"
+        in: "query"
+        description: "Tags to filter by"
+        required: true
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "multi"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Todo"
+        400:
+          description: "Invalid tag value"
 
 parameters:
   todo_id:
@@ -125,8 +185,10 @@ definitions:
         minLength: 1
         maxLength: 1000
       tags:
-        type: object
+        type: array
         description: Custom tags
+        items:
+          $ref: "#/definitions/Tag"
       created:
         type: string
         format: date-time
@@ -134,6 +196,14 @@ definitions:
         example: "2015-07-07T15:49:51.230+02:00"
         readOnly: true
 
+  Tag:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
 
 securityDefinitions:
   oauth2:
